--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^4.14.0",
     "ffmetadata": "^1.4.0",
     "ffmpeg": "0.0.4",
-    "socket.io": "^1.4.8",
+    "fluent-ffmpeg": "^2.1.0",
     "ytdl-core": "^0.7.17"
   }
 }
