--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ffmetadata": "^1.4.0",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.0",
+    "socket.io": "^1.7.2",
     "ytdl-core": "^0.7.17"
   }
 }
